Added Angular Flexbox Created some initial primitive layouts Started on first service.

--- a/src/app/components/game/board/board.component.html
+++ b/src/app/components/game/board/board.component.html
@@ -1,3 +1,10 @@
-<p>
-  board works!
-</p>
+<div fxLayout="row" fxLayoutGap="10px">
+  <div fxFlex>
+    <p>
+      board works!
+    </p>
+  </div>
+  <div fxFlex="100px">
+    <foil-sites></foil-sites>
+  </div>
+</div>
